--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,11 +1,22 @@
 .header-menu {
+  border: 1px solid gray;
+}
+.header-title {
   padding-right: 1em;
-  border-bottom: 1px solid gray;
+  /* margin: auto; */
+  text-align: left;
+  padding-left: 1em;
+  /* border-bottom: 1px solid gray; */
   font-size: 1.5em;
 }
 
-.header-menu a {
+.header-title a {
   text-decoration: none;
+}
+.header-left {
+  right: 1em;
+  font-size: 1.5em;
+  position: absolute;
 }
 
 .header-left ul {
@@ -18,6 +29,10 @@
   text-align: center;
   padding: 0em 1em;
   border-left: 1px solid gray;
+}
+
+.header-left ul :hover {
+  background-color: gray;
 }
 
 .menu-show {
